tptp_grammar/cnf_formulaParser.py
# Generated from cnf_formula.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class cnf_formulaParser ( Parser ):

    grammarFileName = "cnf_formula.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "'|'", "'~'", "'!='", 
                     "'='", "':='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Or", "Not", "Infix_inequality", "Infix_equality", 
                      "Assignment", "Real", "Signed_real", "Unsigned_real", 
                      "Rational", "Signed_rational", "Unsigned_rational", 
                      "Integer", "Signed_integer", "Unsigned_integer", "Decimal", 
                      "Positive_decimal", "Decimal_exponent", "Decimal_fraction", 
                      "Dot_decimal", "Exp_integer", "Signed_exp_integer", 
                      "Unsigned_exp_integer", "Dollar_word", "Dollar_dollar_word", 
                      "Upper_word", "Lower_word", "Single_quoted", "Distinct_object", 
                      "WS", "Line_comment", "Block_comment" ]

    RULE_fof_infix_unary = 0
    RULE_fof_atomic_formula = 1
    RULE_fof_plain_atomic_formula = 2
    RULE_fof_defined_atomic_formula = 3
    RULE_fof_defined_plain_formula = 4
    RULE_fof_defined_infix_formula = 5
    RULE_fof_system_atomic_formula = 6
    RULE_fof_plain_term = 7
    RULE_fof_defined_term = 8
    RULE_fof_defined_atomic_term = 9
    RULE_fof_defined_plain_term = 10
    RULE_fof_system_term = 11
    RULE_fof_arguments = 12
    RULE_fof_term = 13
    RULE_fof_function_term = 14
    RULE_cnf_formula = 15
    RULE_cnf_disjunction = 16
    RULE_cnf_literal = 17
    RULE_defined_infix_pred = 18
    RULE_constant = 19
    RULE_functor = 20
    RULE_system_constant = 21
    RULE_system_functor = 22
    RULE_defined_constant = 23
    RULE_defined_functor = 24
    RULE_defined_term = 25
    RULE_variable = 26
    RULE_atomic_word = 27
    RULE_atomic_defined_word = 28
    RULE_atomic_system_word = 29
    RULE_number = 30

    ruleNames =  [ "fof_infix_unary", "fof_atomic_formula", "fof_plain_atomic_formula", 
                   "fof_defined_atomic_formula", "fof_defined_plain_formula", 
                   "fof_defined_infix_formula", "fof_system_atomic_formula", 
                   "fof_plain_term", "fof_defined_term", "fof_defined_atomic_term", 
                   "fof_defined_plain_term", "fof_system_term", "fof_arguments", 
                   "fof_term", "fof_function_term", "cnf_formula", "cnf_disjunction", 
                   "cnf_literal", "defined_infix_pred", "constant", "functor", 
                   "system_constant", "system_functor", "defined_constant", 
                   "defined_functor", "defined_term", "variable", "atomic_word", 
                   "atomic_defined_word", "atomic_system_word", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    Or=4
    Not=5
    Infix_inequality=6
    Infix_equality=7
    Assignment=8
    Real=9
    Signed_real=10
    Unsigned_real=11
    Rational=12
    Signed_rational=13
    Unsigned_rational=14
    Integer=15
    Signed_integer=16
    Unsigned_integer=17
    Decimal=18
    Positive_decimal=19
    Decimal_exponent=20
    Decimal_fraction=21
    Dot_decimal=22
    Exp_integer=23
    Signed_exp_integer=24
    Unsigned_exp_integer=25
    Dollar_word=26
    Dollar_dollar_word=27
    Upper_word=28
    Lower_word=29
    Single_quoted=30
    Distinct_object=31
    WS=32
    Line_comment=33
    Block_comment=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Fof_infix_unaryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fof_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cnf_formulaParser.Fof_termContext)
            else:
                return self.getTypedRuleContext(cnf_formulaParser.Fof_termContext,i)


        def Infix_inequality(self):
            return self.getToken(cnf_formulaParser.Infix_inequality, 0)

        def getRuleIndex(self):
            return cnf_formulaParser.RULE_fof_infix_unary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_infix_unary" ):
                listener.enterFof_infix_unary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_infix_unary" ):
                listener.exitFof_infix_unary(self)




    def fof_infix_unary(self):

        localctx = cnf_formulaParser.Fof_infix_unaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_fof_infix_unary)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.fof_term()
            self.state = 63
            self.match(cnf_formulaParser.Infix_inequality)
            self.state = 64
            self.fof_term()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_atomic_formulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fof_plain_atomic_formula(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_plain_atomic_formulaContext,0)


        def fof_defined_atomic_formula(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_defined_atomic_formulaContext,0)


        def fof_system_atomic_formula(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_system_atomic_formulaContext,0)


        def getRuleIndex(self):
            return cnf_formulaParser.RULE_fof_atomic_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_atomic_formula" ):
                listener.enterFof_atomic_formula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_atomic_formula" ):
                listener.exitFof_atomic_formula(self)




    def fof_atomic_formula(self):

        localctx = cnf_formulaParser.Fof_atomic_formulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_fof_atomic_formula)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.fof_plain_atomic_formula()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.fof_defined_atomic_formula()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.fof_system_atomic_formula()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_plain_atomic_formulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fof_plain_term(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_plain_termContext,0)


        def getRuleIndex(self):
            return cnf_formulaParser.RULE_fof_plain_atomic_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_plain_atomic_formula" ):
                listener.enterFof_plain_atomic_formula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_plain_atomic_formula" ):
                listener.exitFof_plain_atomic_formula(self)




    def fof_plain_atomic_formula(self):

        localctx = cnf_formulaParser.Fof_plain_atomic_formulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_fof_plain_atomic_formula)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.fof_plain_term()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_defined_atomic_formulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fof_defined_plain_formula(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_defined_plain_formulaContext,0)


        def fof_defined_infix_formula(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_defined_infix_formulaContext,0)


        def getRuleIndex(self):
            return cnf_formulaParser.RULE_fof_defined_atomic_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_defined_atomic_formula" ):
                listener.enterFof_defined_atomic_formula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_defined_atomic_formula" ):
                listener.exitFof_defined_atomic_formula(self)




    def fof_defined_atomic_formula(self):

        localctx = cnf_formulaParser.Fof_defined_atomic_formulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_fof_defined_atomic_formula)
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.fof_defined_plain_formula()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.fof_defined_infix_formula()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_defined_plain_formulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fof_defined_term(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_defined_termContext,0)


        def getRuleIndex(self):
            return cnf_formulaParser.RULE_fof_defined_plain_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_defined_plain_formula" ):
                listener.enterFof_defined_plain_formula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_defined_plain_formula" ):
                listener.exitFof_defined_plain_formula(self)




    def fof_defined_plain_formula(self):

        localctx = cnf_formulaParser.Fof_defined_plain_formulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fof_defined_plain_formula)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.fof_defined_term()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_defined_infix_formulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fof_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cnf_formulaParser.Fof_termContext)
            else:
                return self.getTypedRuleContext(cnf_formulaParser.Fof_termContext,i)


        def defined_infix_pred(self):
            return self.getTypedRuleContext(cnf_formulaParser.Defined_infix_predContext,0)


        def getRuleIndex(self):
            return cnf_formulaParser.RULE_fof_defined_infix_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_defined_infix_formula" ):
                listener.enterFof_defined_infix_formula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_defined_infix_formula" ):
                listener.exitFof_defined_infix_formula(self)




    def fof_defined_infix_formula(self):

        localctx = cnf_formulaParser.Fof_defined_infix_formulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fof_defined_infix_formula)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.fof_term()
            self.state = 80
            self.defined_infix_pred()
            self.state = 81
            self.fof_term()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_system_atomic_formulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fof_system_term(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_system_termContext,0)


        def getRuleIndex(self):
            return cnf_formulaParser.RULE_fof_system_atomic_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_system_atomic_formula" ):
                listener.enterFof_system_atomic_formula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_system_atomic_formula" ):
                listener.exitFof_system_atomic_formula(self)




    def fof_system_atomic_formula(self):

        localctx = cnf_formulaParser.Fof_system_atomic_formulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fof_system_atomic_formula)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.fof_system_term()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_plain_termContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constant(self):
            return self.getTypedRuleContext(cnf_formulaParser.ConstantContext,0)


        def functor(self):
            return self.getTypedRuleContext(cnf_formulaParser.FunctorContext,0)


        def fof_arguments(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_argumentsContext,0)


        def getRuleIndex(self):
            return cnf_formulaParser.RULE_fof_plain_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_plain_term" ):
                listener.enterFof_plain_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_plain_term" ):
                listener.exitFof_plain_term(self)




    def fof_plain_term(self):

        localctx = cnf_formulaParser.Fof_plain_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fof_plain_term)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.constant()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.functor()
                self.state = 87
                self.match(cnf_formulaParser.T__0)
                self.state = 88
                self.fof_arguments()
                self.state = 89
                self.match(cnf_formulaParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_defined_termContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defined_term(self):
            return self.getTypedRuleContext(cnf_formulaParser.Defined_termContext,0)


        def fof_defined_atomic_term(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_defined_atomic_termContext,0)


        def getRuleIndex(self):
            return cnf_formulaParser.RULE_fof_defined_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_defined_term" ):
                listener.enterFof_defined_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_defined_term" ):
                listener.exitFof_defined_term(self)




    def fof_defined_term(self):

        localctx = cnf_formulaParser.Fof_defined_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_fof_defined_term)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [cnf_formulaParser.Real, cnf_formulaParser.Rational, cnf_formulaParser.Integer, cnf_formulaParser.Distinct_object]:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.defined_term()
                pass
            elif token in [cnf_formulaParser.Dollar_word]:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.fof_defined_atomic_term()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_defined_atomic_termContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fof_defined_plain_term(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_defined_plain_termContext,0)


        def getRuleIndex(self):
            return cnf_formulaParser.RULE_fof_defined_atomic_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_defined_atomic_term" ):
                listener.enterFof_defined_atomic_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_defined_atomic_term" ):
                listener.exitFof_defined_atomic_term(self)




    def fof_defined_atomic_term(self):

        localctx = cnf_formulaParser.Fof_defined_atomic_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_fof_defined_atomic_term)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.fof_defined_plain_term()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_defined_plain_termContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defined_constant(self):
            return self.getTypedRuleContext(cnf_formulaParser.Defined_constantContext,0)


        def defined_functor(self):
            return self.getTypedRuleContext(cnf_formulaParser.Defined_functorContext,0)


        def fof_arguments(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_argumentsContext,0)


        def getRuleIndex(self):
            return cnf_formulaParser.RULE_fof_defined_plain_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_defined_plain_term" ):
                listener.enterFof_defined_plain_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_defined_plain_term" ):
                listener.exitFof_defined_plain_term(self)




    def fof_defined_plain_term(self):

        localctx = cnf_formulaParser.Fof_defined_plain_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_fof_defined_plain_term)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.defined_constant()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.defined_functor()
                self.state = 101
                self.match(cnf_formulaParser.T__0)
                self.state = 102
                self.fof_arguments()
                self.state = 103
                self.match(cnf_formulaParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_system_termContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def system_constant(self):
            return self.getTypedRuleContext(cnf_formulaParser.System_constantContext,0)


        def system_functor(self):
            return self.getTypedRuleContext(cnf_formulaParser.System_functorContext,0)


        def fof_arguments(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_argumentsContext,0)


        def getRuleIndex(self):
            return cnf_formulaParser.RULE_fof_system_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_system_term" ):
                listener.enterFof_system_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_system_term" ):
                listener.exitFof_system_term(self)




    def fof_system_term(self):

        localctx = cnf_formulaParser.Fof_system_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_fof_system_term)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.system_constant()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.system_functor()
                self.state = 109
                self.match(cnf_formulaParser.T__0)
                self.state = 110
                self.fof_arguments()
                self.state = 111
                self.match(cnf_formulaParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_argumentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fof_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cnf_formulaParser.Fof_termContext)
            else:
                return self.getTypedRuleContext(cnf_formulaParser.Fof_termContext,i)


        def getRuleIndex(self):
            return cnf_formulaParser.RULE_fof_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_arguments" ):
                listener.enterFof_arguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_arguments" ):
                listener.exitFof_arguments(self)




    def fof_arguments(self):

        localctx = cnf_formulaParser.Fof_argumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_fof_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.fof_term()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==cnf_formulaParser.T__2:
                self.state = 116
                self.match(cnf_formulaParser.T__2)
                self.state = 117
                self.fof_term()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_termContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fof_function_term(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_function_termContext,0)


        def variable(self):
            return self.getTypedRuleContext(cnf_formulaParser.VariableContext,0)


        def getRuleIndex(self):
            return cnf_formulaParser.RULE_fof_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_term" ):
                listener.enterFof_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_term" ):
                listener.exitFof_term(self)




    def fof_term(self):

        localctx = cnf_formulaParser.Fof_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_fof_term)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [cnf_formulaParser.Real, cnf_formulaParser.Rational, cnf_formulaParser.Integer, cnf_formulaParser.Dollar_word, cnf_formulaParser.Dollar_dollar_word, cnf_formulaParser.Lower_word, cnf_formulaParser.Single_quoted, cnf_formulaParser.Distinct_object]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.fof_function_term()
                pass
            elif token in [cnf_formulaParser.Upper_word]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.variable()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_function_termContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fof_plain_term(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_plain_termContext,0)


        def fof_defined_term(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_defined_termContext,0)


        def fof_system_term(self):
            return self.getTypedRuleContext(cnf_formulaParser.Fof_system_termContext,0)


        def getRuleIndex(self):
            return cnf_formulaParser.RULE_fof_function_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_function_term" ):
                listener.enterFof_function_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_function_term" ):
                listener.exitFof_function_term(self)




    def fof_function_term(self):

        localctx = cnf_formulaParser.Fof_function_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_fof_function_term)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [cnf_formulaParser.Lower_word, cnf_formulaParser.Single_quoted]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.fof_plain_term()
                pass
            elif token in [cnf_formulaParser.Real, cnf_formulaParser.Rational, cnf_formulaParser.Integer, cnf_formulaParser.Dollar_word, cnf_formulaParser.Distinct_object]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.fof_defined_term()
                pass
            elif token in [cnf_formulaParser.Dollar_dollar_word]:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.fof_system_term()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cnf_formulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cnf_disjunction(self):
            return self.getTypedRuleContext(cnf_formulaParser.Cnf_disjunctionContext,0)


        def getRuleIndex(self):
            return cnf_formulaParser.RULE_cnf_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCnf_formula" ):
                listener.enterCnf_formula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCnf_formula" ):
                listener.exitCnf_formula(self)




    def cnf_formula(self):
